# skills

./: .gitignore  README.md
.github/: PLUGIN.md
.github/agents/: suppa-dev.agent.md
.github/instructions/: engineering.instructions.md  suppa-platform.instructions.md
.github/prompts/: code-review.prompt.md  suppa-bug-to-task.prompt.md  suppa-document-feature.prompt.md  suppa-implement-task.prompt.md  suppa-standup.prompt.md
skills/suppa-docs/: SKILL.md
skills/suppa-docs/references/: api-endpoints.md  field-formats.md
skills/suppa-docs/scripts/: suppa_api.py
skills/suppa-entity/references/: api-endpoints.md
skills/suppa-entity/scripts/: suppa_api.py
skills/suppa-forms/: SKILL.md
skills/suppa-forms/references/: api-endpoints.md  field-formats.md
skills/suppa-forms/scripts/: suppa_api.py
skills/suppa-tasks/references/: field-formats.md
suppa-entity-2.0/: SKILL.md  install.js  package.json
suppa-entity-2.0/references/: field-formats.md
suppa-entity-2.0/scripts/: suppa_api.py
suppa-tasks-2.0/: SKILL.md  install.js  package.json
suppa-tasks-2.0/references/: api-endpoints.md
suppa-tasks-2.0/scripts/: suppa_api.py
suppa2.0-mcp-server/: .env.example  CONNECT.md  README.md  pyproject.toml
suppa2.0-mcp-server/src/suppa_mcp/: __init__.py  __main__.py  config.py  http_client.py  server.py  utils.py
suppa2.0-mcp-server/src/suppa_mcp/tools/: docs.py  entity.py  forms.py  tasks.py
