[project]
name = "suppa2.0-mcp-server"
version = "1.0.0"
description = "MCP server for the Suppa platform (modern.suppa.me) — Tasks, Docs, Entities, Forms"
requires-python = ">=3.10"
dependencies = ["mcp[cli]>=1.0.0"]

[project.scripts]
suppa-mcp = "suppa_mcp:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/suppa_mcp"]
